# pyXhCustApp

./: .gitignore  README.md  build.sh  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
src/: pyXhCustApp.py
src/py_xh_custapp_xethhung12/: __init__.py  __main__.py  _pyXhCustApp.py
src/py_xh_custapp_xethhung12/_cmd/: run.py
