[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "py-xh-custapp-xethhung12"
version = "1.4.8"
description = "Custom App Environment"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "GPL-3.0-only"
license-files = [ "LICEN[CS]E*",]
dependencies = [ "j-vault-http-client-xethhung12 >= 0.1.1", "pycryptodome",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.urls]
Homepage = "https://github.com/xh-dev-py/pyXhCustApp"
Issues = "https://github.com/xh-dev-py/pyXhCustApp/issues"

[project.scripts]
pyXhCustapp = "py_xh_custapp_xethhung12._cmd.run:main"

[tool.hatch.build.targets.wheel]
packages = [ "src/py_xh_custapp_xethhung12",]
